# rust-hybrid-workflow

./: .env.example  .gitignore  Cargo.toml  README.md  RUST_TESTS.md  WASI_IMPLEMENTATION_SUMMARY.md  WEB_UI.md  WEB_UI_QUICKSTART.md  config.toml.example  quick_test.sh  run_web_ui.sh  run_web_ui_dev.sh  stop_servers.sh  test_workflows.sh  watch_css.sh
assets/: workflow-web.css
docs/: CONFIGURATION.md  PARALLEL_EXECUTION.md  README.md  TESTING.md  WASI.md  WASI_IMPLEMENTATION_SUMMARY.md  WEB_UI.md  WEB_UI_DEV.md
examples/: wasi_workflow.lua
pkg/: index.html  style-187669942b308fc2.css  style-94809878b0937664.css  style-b58257b5346587.css  workflow-web-ui-168c06c18443c235.js  workflow-web-ui-168c06c18443c235_bg.wasm  workflow-web-ui-5cf5a84a0d556c5e.js  workflow-web-ui-5cf5a84a0d556c5e_bg.wasm  workflow-web-ui-7c39d9994060ddbe.js  workflow-web-ui-7c39d9994060ddbe_bg.wasm  workflow-web-ui-a38aa81463b0dd35.js  workflow-web-ui-a38aa81463b0dd35_bg.wasm  workflow-web-ui-bd39e13db0556aa5.js  workflow-web-ui-bd39e13db0556aa5_bg.wasm
src/: engine.rs  lib.rs  lua_loader.rs  lua_runner.rs  main.rs  python_runner.rs
src/components/: mod.rs
src/config/: mod.rs
src/core/: engine.rs  lua_loader.rs  mod.rs  parallel_engine.rs
src/pages/: mod.rs
src/runners/: javascript_runner.rs  lua_runner.rs  mod.rs  python_runner.rs  shell_runner.rs  wasm_runner.rs  wasm_runner_wasi.rs.example
src/utils/: mod.rs
src/web/: app.rs  main.rs  mod.rs
src/web/components/: workflow_list.rs  workflow_runner.rs
wasm_modules/: Cargo.toml  WASI_README.md
wasm_modules/src/: lib.rs
web-ui/: Cargo.toml  Trunk.toml  index.html  style.css
web-ui/src/: app.rs  lib.rs
web-ui/src/components/: mod.rs  not_found.rs  workflow_list.rs  workflow_runner.rs
workflows/: comprehensive_workflow.lua  example_wasm_module.wasm  hybrid_workflow.lua  javascript_workflow.lua  js_python_shell_workflow.lua  multi_language_workflow.lua  parallel_demo.lua  pure_shell_workflow.lua  shell_workflow.lua  wasm_workflow.lua  workflow.lua
