[package]
name = "hybrid-workflow-engine"
version = "0.1.0"
authors = ["Spydevman <spydevman@gmail.com>"]
edition = "2024"

[lib]
name = "workflow_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"], optional = true }
pyo3 = { version = "0.27.1", features = ["auto-initialize"], optional = true }
anyhow = "1.0"
serde_json = "1.0"
tempfile = { version = "3.0", optional = true }
wasmtime = { version = "26.0", optional = true }
wasmtime-wasi = { version = "26.0", optional = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# Configuration management
config = { version = "0.15.0", default-features = false, features = ["toml", "json", "yaml"], optional = true }
toml = { version = "0.8", optional = true }
dotenvy = { version = "0.15", optional = true }

# Leptos dependencies for web UI
leptos = { version = "0.6", features = ["csr", "nightly"], optional = true }
leptos_meta = { version = "0.6", features = ["csr"], optional = true }
leptos_router = { version = "0.6", features = ["csr"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
gloo-net = { version = "0.5", optional = true }

# For server backend
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# For parallel execution
futures = { version = "0.3", optional = true }
num_cpus = { version = "1.0", optional = true }

[features]
default = ["cli"]
cli = ["mlua", "pyo3", "tempfile", "wasmtime", "wasmtime-wasi", "config", "toml", "dotenvy", "tokio", "futures", "num_cpus"]
web-ui = ["leptos", "leptos_meta", "leptos_router", "console_error_panic_hook", "wasm-bindgen", "gloo-net"]
web-server = ["mlua", "pyo3", "tempfile", "wasmtime", "wasmtime-wasi", "axum", "tokio", "tower", "tower-http", "config", "toml", "dotenvy", "futures", "num_cpus"]

[[bin]]
name = "hybrid-workflow-engine"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "workflow-web-server"
path = "src/bin/workflow-web-server/main.rs"
required-features = ["web-server"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
